--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,9 @@ button {
 }
 
 .section {
-  width: 1140px;
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
@@ -132,13 +134,10 @@ body {
 /* ***** Hero 1 ***** */
 
 .hero {
-  width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 188px;
   padding-bottom: 188px;
-  background-color: var(--color-text-sec);
-  background-image: url("../images/bg/bg1.jpg");
+  background-color: rgba(46, 47, 66, 0.7);
+  background-image: url("../images/bg/bg.jpg");
   background-size: cover;
 }
 
