--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ button {
 }
 
 .section {
-  width: 1440px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -136,9 +136,14 @@ body {
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
-  background-color: rgba(46, 47, 66, 0.7);
-  background-image: url("../images/bg/bg.jpg");
+  background-color: var(--color-text-sec);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/bg/bg.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .title-page {
