--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,29 @@ body {
 
 .container-description .description {
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.social-list-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color-logo);
+}
+
+.social-list-icon {
+  fill: var(--color-white-light);
+  width: 16px;
+  height: 16px;
 }
 
 /* ***** /Our Team ***** */
