--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ body {
   margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.1;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -329,7 +329,7 @@ body {
 
 .list-cust-svg {
   display: flex;
-  justify-content: space-between;
+  gap: 24px;
 }
 .list-item-cust {
   display: flex;
