--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,12 @@ body {
 }
 
 /***** Header *****/
+.container-header {
+  display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 
 .page-header .menu-link:hover,
 .page-header .menu-link:focus {
@@ -67,17 +73,12 @@ body {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.page-header .container {
-  display: flex;
-}
-
 .nav-page {
   display: flex;
   align-items: center;
 }
 
 .menu-nav {
-  /* j */
   display: flex;
 }
 
@@ -117,6 +118,7 @@ body {
 
 .address-header {
   font-style: normal;
+  margin-left: auto;
 }
 
 .menu-address .menu-link {
@@ -158,7 +160,6 @@ body {
   margin-right: auto;
   margin-left: auto;
   display: block;
-
   padding: 16px 32px;
   border: none;
   border-radius: 4px;
@@ -170,6 +171,7 @@ body {
   background: var(--color-logo);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
 .button-order:hover,
 .button-order:focus {
   background-color: var(--color-text-hover-focus);
@@ -177,9 +179,17 @@ body {
 /* ***** /Hero  ***** */
 
 /* ***** Skills 2 ***** */
+
 .skills {
   padding-top: 120px;
   padding-bottom: 120px;
+}
+
+.container-skills {
+  display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .icon-container-skills {
@@ -217,6 +227,12 @@ body {
   padding-bottom: 120px;
 }
 
+.container-our-work {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .menu-our-work {
   display: flex;
   column-gap: 24px;
@@ -246,6 +262,12 @@ body {
   padding-bottom: 120px;
 }
 
+.container-our-team {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .menu-our-team {
   display: flex;
   column-gap: 24px;
@@ -257,13 +279,6 @@ body {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.container-our-team {
-  justify-content: space-between;
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
 }
 
 .container-description {
@@ -325,12 +340,16 @@ body {
 }
 
 .container-customers {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .list-cust-svg {
   display: flex;
   gap: 24px;
 }
+
 .list-item-cust {
   display: flex;
   justify-content: center;
@@ -386,6 +405,12 @@ body {
 .hero-portfolio {
   padding-top: 96px;
   padding-bottom: 120px;
+}
+
+.container-portfolio {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .menu-button {
