--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,10 @@ body {
   color: #404bbf;
 }
 
+.logo-cust-svg {
+  fill: currentColor;
+}
+
 /* ***** /Customers ***** */
 
 /* ***** Footer ***** */
