--- a/css/style.css
+++ b/css/style.css
@@ -378,11 +378,14 @@ body {
 
 /* ***** Footer ***** */
 .footer-page {
-  display: flex;
   padding-top: 100px;
   padding-bottom: 100px;
   padding-left: 156px;
   background-color: var(--color-text-sec);
+}
+
+.container-footer {
+  display: flex;
 }
 
 .footer-page .description {
@@ -400,8 +403,16 @@ body {
 }
 
 .container-footer {
-  margin-right: 120px;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+  display: flex;
+  align-items: baseline;
+  gap: 120px;
 }
+.container-foot-logo {
+}
+
 .desc-foot-svg {
   font-weight: 500;
   font-size: 1.5;
