--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --color-text-hover-focus: #404bbf;
   --bg-color-head: #ffffff;
   --color-border: #e7e9fc;
+  --color-svg-logo-cust: #8e8f99;
 }
 
 h1,
@@ -192,6 +193,7 @@ body {
   padding: 0 15px;
 }
 
+/* SVG - Skills */
 .icon-container-skills {
   display: flex;
   justify-content: center;
@@ -201,6 +203,7 @@ body {
   background: var(--color-white-light);
   border-radius: 4px;
 }
+/* /SVG - Skills */
 
 .menu-skills {
   display: flex;
@@ -296,7 +299,7 @@ body {
 }
 
 /* SVG - Our Team  */
-.menu-social {
+.menu-social-svg {
   display: flex;
   justify-content: center;
   gap: 24px;
@@ -345,6 +348,7 @@ body {
   padding: 0 15px;
 }
 
+/* SVG - Custumers */
 .menu-cust-svg {
   display: flex;
   gap: 24px;
@@ -361,20 +365,21 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  border: 1px solid #8e8f99;
+  border: 1px solid var(--color-svg-logo-cust);
   border-radius: 4px;
-  color: #8e8f99;
+  color: var(--color-svg-logo-cust);
 }
 
 .link-logo-cust:hover,
 .link-logo-cust:focus {
   border-color: #404bbf;
-  color: #404bbf;
+  color: var(--color-text-hover-focus);
 }
 
 .logo-cust-svg {
   fill: currentColor;
 }
+/* /SVG - Custumers */
 
 /* ***** /Customers ***** */
 
@@ -417,6 +422,17 @@ body {
   margin-bottom: 16px;
   color: var(--bg-color-head);
 }
+
+/* SVG - Footer */
+.container-foot-svg .menu-social-svg {
+  gap: 16px;
+}
+
+.container-foot-svg .social-list-link:hover,
+.container-foot-svg .social-list-link:focus {
+  background-color: #31d0aa;
+}
+/* /SVG - Footer */
 
 /* ***** Hero-Portfolio ***** */
 
