--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,16 @@ body {
   row-gap: 48px;
 }
 
+.menu-img .menu-link {
+  display: block;
+}
+
+.menu-img .menu-link:hover,
+.menu-img .menu-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .container-card {
   padding: 32px 16px;
   border: 1px solid var(--color-border);
